fix: change gap for 1279px page size

--- a/shelter/styles/styles_pets.css
+++ b/shelter/styles/styles_pets.css
@@ -481,6 +481,13 @@ button {
     cursor: pointer;
 }
 
+@media screen and (max-width: 1279px) {
+
+.our-friends__slider__cards {
+
+    column-gap: 30px;
+}
+
 @media screen and (max-width: 769px) {
     .footer {
         padding: 14px 64px 0;
